--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,14 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
 .App {
-    max-width: 100vw;
-    overflow-x: hidden;
+  max-width: 100vw;
+ 
+  max-height: 100vh;
+  overflow-x: hidden;
+  scrollbar-width: none;
 }
+.App::-webkit-scrollbar {
+  width: 0px;
+}
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0 100px;
+}
+header .links {
+  display: flex;
+
+  align-items: center;
+  gap: 15px;
+}
+header .links .icon {
+  border-radius: 50%;
+  font-size: 20px;
+  border: 1px solid;
+  padding: 7px;
+  transition: background-color 0.3s ease;
+}
+header .links .icon:hover {
+  background-color: var(--light-gray);
+  color: var(--darkcyan);
+}
+
 .logo {
-    font-size: 40px;
+    font-size: 20px;
     
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Monoton', cursive;
     color: var(--darkcyan);
     letter-spacing: -0.6px;
-    margin: 20px 0 70px;
+    
     background: linear-gradient(
       135deg,
       transparent 7px,
@@ -30,11 +62,10 @@
     z-index: 2;
   }
   .hero .grid {
-  
     display: grid;
-   
-    grid-template-columns: auto auto;
-    gap:100px 60px;
+    grid-template-columns: repeat(2, calc(50% - 45px));
+    grid-gap: 90px 60px;
+    gap: 90px 60px;
     position: relative;
   }
   .hero .right {
@@ -42,24 +73,23 @@
     position: relative;
   }
   .hero .right img{
-    position: absolute;
-    top: -90px;
-    right: -100px;
-    width: 650px;
+    width: 635px;
     margin: auto;
     max-width: 700px;
     filter: brightness(0.8);
-    rotate: -5deg;
-    filter: brightness(0.8) drop-shadow(2px 4px 6px #000);
+    height: 100%;
+    scale: 1.2;
+    translate: 10% -10%;
   }
   .hero .content .left{
     max-width: fit-content;
   }
   .hero .content h5{
     line-height: 0.9;
-    letter-spacing: 1.5px;
-   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 5rem;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+    font-family: 'Monoton', cursive;
+    font-size: 6rem;
     text-transform: uppercase;
     font-weight: 500;
   
@@ -67,13 +97,15 @@
   .hero .content h5.last{
     font-size: 6rem;
     font-weight: 500;
+    letter-spacing: 0.8px;
     color: var(--tomato);
-    margin: 10px 0 20px;
-    scale: 1.6 1;
+   
+   
     transform-origin: left;
    
   }
   .hero .content p {
+    margin-top: 20px;
     font-size: 20px;
     max-width: 550px;
   }
@@ -99,97 +131,96 @@
     color: var(--darcker);
     background-color: var(--light-gray);
   }
+  .hero .col {
+    padding: 50px 0;
+ 
+  }
   .hero .col h4 {
     color: var(--tomato);
-  
+    font-size: 20px;
+
   }
+  
+  
   .hero p.p {
-    font-size: 13px;
-   
-    font-weight: 600;
+    margin-top: 8px;
+   font-weight: 200;
     line-height: 1.3;
+    max-width: 500px;
+    opacity: 0.7;
+    font-size: 16px;
   
   }
   .bg-y{
     position: fixed;
-    top: 0;
-    right: 0;
-    width: 250px;
-    height: 75vh;
-    background-color: var(--yellow);
+    top: 0px;
+    right: 60px;
+    width: 300px;
+    height: 100vh;
+    background: var(--yellow);
     z-index: -1;
-    clip-path: polygon(100% 100%, -0% 85%, 0% 0%, 100% 0%);
+    filter: brightness(0.5);
+ 
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
   }
-  .login {
-    padding: 20px;
-    border: 2px solid var(--tomato);
-    width: 95vw;
-    max-width: 340px;
+  .about {
+    grid-column: span 2;
+    padding: 70px 0;
+  }
+  .about img {
+  width: 100%;
+filter: brightness(0.5);
+object-fit: contain;}
+  .about h3{
+    padding: 70px 0;
+    font-size: 3.5rem;
+    text-align: center;}
+  @media (max-width:1100px) {
    
-    text-align: center;
-    border-radius: 0;
-    background: linear-gradient(135deg, var(--tomato) 15%, var(--darcker) 15%, var(--darcker) 87% ,var(--tomato) 85%), no-repeat;
-    color: #fff;
+    .hero .content h5{
+     
+      font-size: 5rem;
+    
+    
+    }
+    .hero .content h5.last{
+      font-size: 5.3rem;
+     
+    }
+    .hero .content p {
+     
+      max-width: 100%;
+    }
+    
   }
-  .login h1{
-    margin-bottom:30px;
-  }
-  .login button {
-    box-shadow: rgb(0 0 0 / 24%) 0px 2px 2px 0px, rgb(0 0 0 / 24%) 0px 0px 1px 0px;
-    background:#EB5937C4;
-    padding: 10px 30px;
-    border-radius: 2px;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: Roboto, sans-serif;
-    opacity: 1;
-  
-  }
-  @media (max-width:992px ) {
+  @media (max-width:950px ) {
     .hero .right {
-      position: absolute;
-      top: 0;
-      right: 0;
+      display: none;
     }
-    .hero .right img{
-      filter: brightness(0.45);
-    }
-    .hero .content .left{
-      grid-column: span 2;
-      position: relative;
-      z-index: 2;
-    }
-    .hero .grid {
-      gap: 70px 10px;
-    }
-  }
-  @media (max-width:520px ) {
+   
     .hero .grid {
       grid-template-columns: 1fr;
+      text-align: center;
+      gap: 20px;
     }
-    .hero .right{
-      right: -200px;
-      z-index: -1;
+    .hero .content h5{
+     
+      font-size: 10vw;
+    
+    
     }
-    .hero .right img{
-      top: -10px;
+    .hero .content h5.last{
+      font-size: 10vw;
+      margin-bottom: 30px;
+     
     }
-    .hero .content .left{
-      grid-column: span 1;
+    
+    .hero .content p {
+      font-size:4.8vw ;
     }
-    .hero .grid {
-      gap: 30px 10px;
-    }
-    .hero .content h5 {
-      font-size: 3rem;
-    }
-    .hero .content h5.last {
-      font-size: 6rem;
-      margin-top: 5px;
-    }
-    .hero .bg-y {
-        right: -120px;
-        height: 90vh;
-        z-index: -2;
+    .hero .col h4 {
+      
+      font-size: 4vw;
     }
   }
+  
